--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "helmet": "^3.12.0",
     "http-status": "^1.0.1",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.15",
+    "mongoose": "5.0.11",
+    "mongoose-unique-validator": "^2.0.0",
     "pretty-error": "^2.1.1",
     "raven": "^2.5.0",
+    "slug": "^0.9.1",
     "winston": "^2.4.2"
   }
 }
