--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "chalk": "^2.4.0",
+    "cloudinary": "^1.11.0",
     "compression": "^1.7.2",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
@@ -52,6 +53,7 @@
     "method-override": "^2.3.10",
     "mongoose": "5.0.11",
     "mongoose-unique-validator": "^2.0.0",
+    "multer": "^1.3.0",
     "pretty-error": "^2.1.1",
     "raven": "^2.5.0",
     "slug": "^0.9.1",
