--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "multer": "^1.3.0",
     "pretty-error": "^2.1.1",
     "raven": "^2.5.0",
+    "react-router-dom": "^4.2.2",
     "slug": "^0.9.1",
     "winston": "^2.4.2"
   }
